infra/k8s-dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticket-shop.docker
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-service
                port:
                  number: 4000
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: auth-service
                port: 
                  number: 4000
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: tickets-service
                port: 
                  number: 4000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-service
                port:
                  number: 4000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: next-client-service
                port:
                  number: 3000
